--- a/index.html
+++ b/index.html
@@ -11,49 +11,53 @@
     <div class="container">
         <div id="error-div" style="display: none;"><span  id="error">Errors</span><i class="fa fa-times-circle-o" aria-hidden="true"></i></div>
         <div class="containerWrapper">
-            <div class="loginContainer" id="LoginDiv">
-                <h1>Login</h1>
-                <div class="form">
-                    <form action="/" method="get">
-                        <div class="">
-                            <label for="name">Name</label>
-                            <input type="text" name="name" id="userName" required>
-                        </div>
-                        <div class="">
-                            <label for="password">Password</label>
-                            <input type="password" id="passWord" required>
-                        </div>
-                        <button type="submit" id="login-btn">Login</button>
-                    </form>
+            <div class="loginContainer" >
+                <div  class="loginInnerContainer AnimationContainer" id="LoginDiv">
+                    <h1>Login</h1>
+                    <div class="form">
+                        <form action="/" method="get">
+                            <div class="">
+                                <label for="name">Name</label>
+                                <input type="text" name="name" id="userName" required>
+                            </div>
+                            <div class="">
+                                <label for="password">Password</label>
+                                <input type="password" id="passWord" required>
+                            </div>
+                            <button type="submit" id="login-btn">Login</button>
+                        </form>
+                    </div>
+                    <div class="signup">
+                        <span>Don't have an account?</span>
+                        <a href="javascript:void(0)" id="ShowSignUP">
+                            Sign Up
+                        </a>
+                    </div>
                 </div>
-                <div class="signup">
-                    <span>Don't have an account?</span>
-                    <a href="javascript:void(0)" id="ShowSignUP">
-                        Sign Up
-                    </a>
-                </div>
+                <div class="AnimationContainer" style="display: none;" id="SignUpDiv">
+                    <div class="SignupContainer">
+                        <h1>Sign Up</h1>
+                        <div class="form">
+                            <form action="/" method="get">
+                                <div class="">
+                                    <label for="name">Name</label>
+                                    <input type="text" name="name" id="userName" required>
+                                </div>
+                                <div class="">
+                                    <label for="password">Password</label>
+                                    <input type="password" id="passWord" required>
+                                </div>
+                                <button type="submit" id="login-btn">Sign Up</button>
+                            </form>
+                        </div>
+                        <div class="signup">
+                            <span>Have a Account?</span>
+                            <a href="javascript:void(0)" id="ShowLogin">
+                                Login
+                            </a>
+                        </div>
+                    </div>
             </div>
-            <div class="SignupContainer" style="display: none;" id="SignUpDiv">
-                <h1>Sign Up</h1>
-                <div class="form">
-                    <form action="/" method="get">
-                        <div class="">
-                            <label for="name">Name</label>
-                            <input type="text" name="name" id="userName" required>
-                        </div>
-                        <div class="">
-                            <label for="password">Password</label>
-                            <input type="password" id="passWord" required>
-                        </div>
-                        <button type="submit" id="login-btn">Sign Up</button>
-                    </form>
-                </div>
-                <div class="signup">
-                    <span>Have a Account?</span>
-                    <a href="javascript:void(0)" id="ShowLogin">
-                        Login
-                    </a>
-                </div>
             </div>
         </div>
     </div>
